<resources>
    <string name="app_name">Task Tracker</string>
    <string name="tasks">Tasks</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>

    <string name="screen_does_not_implement_yet">This screen does not implement yet!</string>

    <!-- Dates Strings -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This week</string>
    <string name="next_week">Next week</string>
    <string name="this_month">This month</string>
    <string name="next_month">Next month</string>
    <string name="later">Later</string>
    <string name="overdue">Overdue</string>
    <string name="no_date">No date</string>
    <string name="finished">Finished</string>

    <string name="select_date">Select date</string>
    <string name="select_time">Select a time</string>

    <!-- Common Errors -->
    <string name="no_network_error">No network available. Please check your connection</string>
    <string name="internal_error">Internal error. Please try again later</string>
    <string name="feature_does_not_support">This feature does not support yet</string>

    <!-- Login screen -->
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Don\'t have an account? Sign Up!</string>
    <string name="credentials_error">Username or password are not correct</string>
    <string name="username_length_error">Username must be more than %d chars and less then %d chars</string>
    <string name="password_length_error">Password must be more than %d chars and less then %d chars</string>

    <!-- Register screen -->
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="passwords_do_not_match">Confirmed password doesn\'t match</string>
    <string name="email_incorrect">Enter valid email address</string>
    <string name="username_already_found">Username already found. Please choose new username</string>

    <!-- Add Task -->
    <string name="new_task">New Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="create_task">Create</string>
    <string name="title_empty_error">Title cannot be empty</string>

    <!-- Edit Task -->
    <string name="edit_task">Edit Task</string>
    <string name="message_dialog_delete_task">Are you sure you want to delete task?</string>

    <!-- Buttons -->
    <string name="delete_button_name">Delete</string>
    <string name="cancel_button_name">Cancel</string>
</resources>